--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
 
   <title>rmr</title>
   <link rel="manifest" href="manifest.json">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.8.335/pdf.min.js"></script>
+  <script type="text/javascript">
+      pdfjsLib.GlobalWorkerOptions.workerSrc = "//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.8.335/pdf.worker.min.js";
+  </script>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3228078584';
+    var serviceWorkerVersion = '2419509049';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
