--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="https://rgrsolucoes.github.io/rmrweb/index.html">
+  <base href="https://rmrweb-3c6pq6ppr-rgrsolucoes.vercel.app/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
