--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="https://rmrweb-3c6pq6ppr-rgrsolucoes.vercel.app/">
+  <base href="https://cheery-speculoos-2d0d45.netlify.app/">
   
 
   <meta charset="UTF-8">
