--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="https://cheery-speculoos-2d0d45.netlify.app/">
-  
+  <base href="https://cheery-speculoos-2d0d45.netlify.app">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -36,7 +35,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2419509049';
+    var serviceWorkerVersion = '2894921070';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
