--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="https://cheery-speculoos-2d0d45.netlify.app/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -35,7 +35,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2383973791';
+    var serviceWorkerVersion = '2107675986';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
