--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+  
   <base href="https://cheery-speculoos-2d0d45.netlify.app/">
 
   <meta charset="UTF-8">
@@ -28,14 +32,14 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.8.335/pdf.min.js"></script>
   <script type="text/javascript">
       pdfjsLib.GlobalWorkerOptions.workerSrc = "//cdnjs.cloudflare.com/ajax/libs/pdf.js/2.8.335/pdf.worker.min.js";
-  </script>
+  </script>  
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '3293642859';
+    var serviceWorkerVersion = '404332414';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
